tests/urmoac/input/wkt/errors/point_broken_geometry/destinations.wkt
#id;pos;[var]
2000;POINT( 0)
